--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -13,6 +13,7 @@
     <string name="gamePoints">Pisteet %1$d</string>
     <string name="gameTime">Aika %1$s</string>
     <string name="gameQuestion">%1$d %2$s %3$d =</string>
+    <string name="gameToast">Kirjoita vastaus</string>
     <string name="buttonAnswer">Vastaa</string>
     <string name="aboutAuthor">Tekijä: Iina Soikkeli</string>
     <string name="aboutYear">2024</string>
