--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">matikkapeli_laaja</string>
+    <string name="blank"></string>
     <string name="rules">Säännöt</string>
     <string name="about">Tietoa</string>
     <string name="start_header">Matematiikkapeli</string>
