--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">matikkapeli_laaja</string>
+    <string name="blank"></string>
     <string name="rules">Rules</string>
     <string name="about">About</string>
     <string name="start_header">Math Game</string>
