--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -18,6 +18,6 @@
     <string name="buttonAnswer">Vastaa</string>
     <string name="aboutAuthor">Tekijä: Iina Soikkeli</string>
     <string name="aboutYear">2024</string>
-    <string name="rulesText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum risus velit, gravida sed lacinia a, fringilla condimentum tellus. Suspendisse vel viverra lectus. Mauris quis est id dolor pellentesque accumsan ac ac odio. Curabitur luctus sit amet dolor eget efficitur. Ut elementum sagittis nisi, in ornare erat. In efficitur neque hendrerit efficitur cursus. Etiam sed efficitur tortor. Vestibulum maximus augue id metus convallis congue. Praesent vel faucibus massa, ac semper turpis.</string>
+    <string name="rulesText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel viverra lectus. Curabitur luctus sit amet dolor eget efficitur. Ut elementum sagittis nisi, in ornare erat. Praesent vel faucibus massa, ac semper turpis.</string>
     <string name="summaryHeader">Peli ohi</string>
 </resources>
